test/spec_vectors/simd_int_to_int_extend/fail/module_2.wat
(module (func (result v128) (i16x8.extend_high_i8x16_u (i32.const 0))))